--- a/index.html
+++ b/index.html
@@ -7,42 +7,46 @@
   
 <meta name="keywords" content="COVID, CONSULTORIO, PARANA, MEDICOS">
 <meta name="description" content="Somos un espacio de salud multidisciplinario conformado por las áreas de kinesiología, nutrición, cardiologia y clinico. Tambien contamos con salon de estetica y gimnasia funcional.">
-
-
-  </head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="./assets/css/estilos.css">
  <link rel="icon" href="img/icono.ico"> 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
-
-
+ </head>
+ <!-- fuente-->
+ <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
 
 <body class="container-fluid no-gutters"> 
-
+<!-- Inicio del navegador -->
 <header class="row">
 <nav class="col-12">
-<a class="no-gutters row" href="index.html"><img id="img1" src="img/logo3.jpeg" alt="Logo"> </a>
+<a class="no-gutters row" href="index.html"><img id="img1" src="img/logo3.png" alt="Logo"> </a>
+<BR>
 <ul class="nav justify-content-center">
  <li class="nav-item">
-    <a class="nav-link active" href="./views/STAFF%20PROFESIONAL.html">STAFF</a>
+    <a class="nav-link cool-link" href="./views/STAFF%20PROFESIONAL.html">STAFF</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="./views/INFORMACION%20PARA%20PACIENTES.html">INFO PARA PACIENTES</a>
+    <a class="nav-link cool-link" href="./views/INFORMACION%20PARA%20PACIENTES.html">INFO PARA PACIENTES</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="./views/CONTACTO.html">CONTACTO</a>
+    <a class="nav-link cool-link" href="./views/NOVEDADES.html">NOVEDADES</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="./views/NOVEDADES.html">NOVEDADES</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="./views/MISION%20Y%20VISION.html">MISION Y VISION</a>
+    <a class="nav-link cool-link" href="./views/Nosotros.html">NOSOTROS</a>
      </li>
+  <li class="nav-item">
+    <a class="nav-link cool-link" href="./views/MISION%20Y%20VISION.html">MISION Y VISION</a>
+     </li>
+  <li class="nav-item">
+    <a class="nav-link cool-link" href="./views/CONTACTO.php">CONTACTO</a>
+  </li>
 </ul>
 </nav>
 </header>
+<!-- CIERRE del navegador  -->
 
+<!-- Inicio carrucel  -->
 <main class="row no-gutters ">
   <div class="col-12">
 
@@ -87,40 +91,101 @@
 </div>
 </div>
 </main>
+<!-- CIERRE del Carrucel  -->
 <br>
 <div class="separacion"></div>
 <br>
+ <!-- INICIO DE DESCRIPCION DE STAFF  -->
+ <section class=" row container-fluid" >
+ 
+<!-- Cardiologo  -->
+<div class="row no-gutters">
+<div class="card indexstaff " style="width: 18rem;">
+  <img src="img/medico cardiologo.png" class="card-img-top" alt="cardiologo">
+  <div class="card-body">
+    <p class="card-text">Los cardiólogos son médicos que se especializan en el diagnóstico y tratamiento de las enfermedades del corazón y los vasos sanguíneos:
+       el aparato cardiovascular. También se puede consultar a un cardiólogo para saber más sobre los factores de riesgo cardiovascular y
+        averiguar las medidas que pueden tomarse para mejorar la salud cardiovascular. 
+      Los cardiólogos del Instituto del Corazón de Texas (THI) aparecen en el Directorio del personal profesional.</p>
+  </div>
+  </div>
+<!-- Traumatologo  -->
+<div class="row no-gutters">
+  <div class="card indexstaff " style="width: 18rem;">
+    <img src="img/traumatologo.jpg" class="card-img-top" alt="traumatologo">
+    <div class="card-body">
+      <p class="card-text">Un traumatólogo es aquel profesional, especializado en el tratamiento de las lesiones que sufre el aparato locomotor.
+         La traumatología es por ende, la especialidad médica que se centra en el análisis, diagnóstico, tratamiento y
+         seguimiento de dolencias adquiridas por el sistema músculo-esquelético.</p>
+    </div>
+  </div>
+  </div>
+  <!-- kinesiologo -->
+  <div class="row no-gutters">
+    <div class="card indexstaff" style="width: 18rem;">
+      <img src="img/kinesiologo.jpg" class="card-img-top" alt="kinesiologo">
+      <div class="card-body">
+        <p class="card-text">La kinesiología es una terapia natural que evalúa la respuesta de los músculos para detectar desequilibrios en el organismo, y 
+          prevenir trastornos, o corregirlos, con el tratamiento más adecuado para el paciente.</p>
+      </div>
+    </div>
+    </div>
+    <!-- nutricionista -->
+    <div class="row no-gutters">
+    <div class="card indexstaff" style="width: 18rem;">
+      <img src="img/Nutricionista.jpg" class="card-img-top" alt="Nutricionista">
+      <div class="card-body">
+        <p class="card-text">¿Cuál es la función del nutricionista? Básicamente, nuestro rol es realizar una evaluación nutricional y luego la dietoterapia, es decir,
+           diseñar para cada paciente una dieta -dependiendo del estado nutricional y de la patología- con una función terapéutica.</p>
+      </div>
+    </div>
+    </div>
+<!-- Estetica -->
+<div class="row no-gutters">
+  <div class="card indexstaff" style="width: 18rem;">
+    <img src="img/estetica.png" class="card-img-top" alt="estetica">
+    <div class="card-body">
+      <p class="card-text">Estética es la disciplina que estudia la naturaleza de la belleza y la percepción de la misma por parte de los individuos,
+         por lo cual se relaciona estrechamente con el arte. 
+        Posee diferentes acepciones según el contexto donde se emplee, aunque todas giran en torno a la percepción de lo bello.</p>
+    </div>
+  </div>
+</div>
+<!-- Medico clinico  -->
+<div class="row no-gutters">
+  <div class="card indexstaff" style="width: 18rem;">
+    <img src="img/dr clinico.jpg" class="card-img-top" alt="clinico">
+    <div class="card-body">
+      <p class="card-text">Médico Clínico es un especialista en adultos que enfoca al paciente con una concepción integral del ser humano, capacitado para prevenir,
+        diagnosticar, tratar y rehabilitar la patología prevalente, 
+       así como para guiar al paciente por todos los niveles de atención y realizar promoción de la salud; cumple un rol fundamental en la medicina actual.</p>
+    </div>
+  </div>
+  </div>
 
 
-
-<div class="container col-12">
-<section class="img-fluid container text-center">
-  <img src="img/imgindex.jpeg" class="img-fluid" alt="staff" id="imgindex">
 </section>
-</div>
 
-<br>
-
-<section class="comunicado container">
-<div  class="comunicado__index1"> 
-     <div class="comunicado__index2">
-<p class="comunicado__index3">Somos un espacio de salud multidisciplinario conformado por las áreas de kinesiología, nutrición, cardiologia y clinico. Tambien contamos con salon de estetica y gimnasia funcional.</p>
-
-</div>
-
-</div>
-
-</section>
-
-
+<!-- Whatsapp inico -->
 <div class="w-flotante">
   <a href="https://wa.me/5493436221170" target="_blank" class="text-decoration-none"><span class="d-none">WhatsApp
     </span><img src="img/whatsapp-logo-1.png" class="whatsapp"></a>
 </div>
+<!-- CIERRE de whatsapp  -->
 
-
-
-<p id="staff3"><a href="index.html"> KAIROS  Salud y Bienestar</a></p>
+<!-- banner Final  -->
+<section class="position-sticky">
+<div class="final">
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <p class="text-center" ><a class="nav-link" href="index.html"> KAIROS  Salud y Bienestar</a></p>
+     </li>
+     </ul>
+<p class="text-center">Copyright © 2021.</p> <!-- https://www.facebook.com/ema.taborda -->
+</div>
+</section>
+  
+<!-- boostrap  -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
